--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "node dist/server",
     "build:client-and-server-bundles": "ng build --prod && ng run bigoutsource:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "go": "npm run build:ssr && npm run serve:ssr"
   },
   "private": true,
   "dependencies": {
