--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "node dist/server",
     "build:client-and-server-bundles": "ng build --prod && ng run bigoutsource:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "go": "npm run build:ssr && npm run serve:ssr"
   },
   "private": true,
   "dependencies": {
@@ -26,9 +27,13 @@
     "@angular/platform-server": "^6.1.0",
     "@angular/pwa": "^0.7.1",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@ng-toolkit/universal": "^1.1.40",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "ts-loader": "^4.4.2",
